Mobile and tablet versions

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
     <div class="maintext">
 
-      <img src="obrazky/happy-traveler.png" alt="Šťastný cestovatel" />
+      <section class="header">
+
+      <img class="happytraveler" src="obrazky/happy-traveler.png" alt="Šťastný cestovatel" />
 
       <h1>Happy Travels</h1>
 
@@ -30,9 +32,13 @@
         se jen opalovat na pláži.
       </p>
 
-      <button class="dobrodruzstvi">Chci dobrodružství</button>
+      <button class="button dobrodruzstvi">Chci dobrodružství</button>
 
-      <button class="pohoda">Raději pohodu na pláži</button>
+      <button class="button pohoda">Raději pohodu na pláži</button>
+
+      </section>
+
+      <section class="part2">
 
       <h2>Služby naší cestovní kanceláře</h2>
 
@@ -41,26 +47,31 @@
         destinaci a zajistíme pro vás vše od ubtování až po letenky.
       </p>
 
-      <div class="ikonky prvni">
+      <div class="horniikonky">
+      <div class="ikonky">
 
         <img src="obrazky/map-icon.svg" alt="mapa" />
         <p>Naplánujeme zájezdy a výlety do celého světa.</p>
 
       </div>
 
-      <div class="ikonky druha">
+      <div class="ikonky">
 
         <img src="obrazky/cactus-icon.svg" alt="kaktus" />
         <p>Zajistíme exotické destinace a zážitkové pobyty.</p>
 
       </div>
 
-      <div class="ikonky treti">
+      <div class="ikonky">
 
         <img src="obrazky/plane-icon.svg" alt="letadlo" />
         <p>Seženeme nejlevnější letenky v daném termínu.</p>
 
       </div>
+    </div>
+    </section>
+
+    <section class="part3">
 
       <h2>Služby našich delegátů na místě</h2>
 
@@ -68,27 +79,29 @@
         Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí
         vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.
       </p>
-
-      <div class="ikonky ctvrta">
+      <div class="dolniikonky">
+      <div class="ikonky">
 
         <img src="obrazky/palm-icon.svg" alt="palma" />
         <p>Doporučíme ty nejhezčí destinace pro výlety.</p>
 
       </div>
 
-      <div class="ikonky pata">
+      <div class="ikonky">
 
         <img src="obrazky/umbrella-icon.svg" alt="slunecnik" />
         <p>Objednáme slunečníky a plážová lehátka.</p>
 
       </div>
 
-      <div class="ikonky sesta">
+      <div class="ikonky">
 
         <img src="obrazky/rv-icon.svg" alt="karavan" />
         <p>Pronajmeme karavan nebo vůz na cestování.</p>
 
       </div>
+      </div>
+      </section>
 
     </div>
 
