--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
       <img class="happytraveler" src="obrazky/happy-traveler.png" alt="Šťastný cestovatel" />
 
+      <div class="headerleft">
       <h1>Happy Travels</h1>
 
       <div class="line"></div>
@@ -35,18 +36,20 @@
       <button class="button dobrodruzstvi">Chci dobrodružství</button>
 
       <button class="button pohoda">Raději pohodu na pláži</button>
+      </div>
 
       </section>
 
       <section class="part2">
-
+  
+        <div class="righttext">
       <h2>Služby naší cestovní kanceláře</h2>
 
       <p>
         Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou
         destinaci a zajistíme pro vás vše od ubtování až po letenky.
       </p>
-
+    </div>
       <div class="horniikonky">
       <div class="ikonky">
 
@@ -72,13 +75,14 @@
     </section>
 
     <section class="part3">
-
+<div class="lefttext">
       <h2>Služby našich delegátů na místě</h2>
 
       <p>
         Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí
         vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.
       </p>
+    </div>
       <div class="dolniikonky">
       <div class="ikonky">
 
