Updated with PRettier

--- a/index.html
+++ b/index.html
@@ -15,100 +15,85 @@
   </head>
 
   <body>
-
     <div class="maintext">
-
       <section class="header">
+        <img
+          class="happytraveler"
+          src="obrazky/happy-traveler.png"
+          alt="Šťastný cestovatel"
+        />
 
-      <img class="happytraveler" src="obrazky/happy-traveler.png" alt="Šťastný cestovatel" />
+        <div class="headerleft">
+          <h1>Happy Travels</h1>
 
-      <div class="headerleft">
-      <h1>Happy Travels</h1>
+          <div class="line"></div>
 
-      <div class="line"></div>
+          <p>
+            Specializujeme se na exotické destinace a výjimečné zážitkové
+            pobyty. S námi se nikdy nudit nebudete. Ať už chcete zažít pořádný
+            adrenalin nebo se jen opalovat na pláži.
+          </p>
 
-      <p>
-        Specializujeme se na exotické destinace a výjimečné zážitkové pobyty. S
-        námi se nikdy nudit nebudete. Ať už chcete zažít pořádný adrenalin nebo
-        se jen opalovat na pláži.
-      </p>
+          <button class="button dobrodruzstvi">Chci dobrodružství</button>
 
-      <button class="button dobrodruzstvi">Chci dobrodružství</button>
-
-      <button class="button pohoda">Raději pohodu na pláži</button>
-      </div>
-
+          <button class="button pohoda">Raději pohodu na pláži</button>
+        </div>
       </section>
 
       <section class="part2">
-  
         <div class="righttext">
-      <h2>Služby naší cestovní kanceláře</h2>
+          <h2>Služby naší cestovní kanceláře</h2>
 
-      <p>
-        Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou
-        destinaci a zajistíme pro vás vše od ubtování až po letenky.
-      </p>
-    </div>
-      <div class="horniikonky">
-      <div class="ikonky">
+          <p>
+            Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou
+            destinaci a zajistíme pro vás vše od ubtování až po letenky.
+          </p>
+        </div>
+        <div class="horniikonky">
+          <div class="ikonky">
+            <img src="obrazky/map-icon.svg" alt="mapa" />
+            <p>Naplánujeme zájezdy a výlety do celého světa.</p>
+          </div>
 
-        <img src="obrazky/map-icon.svg" alt="mapa" />
-        <p>Naplánujeme zájezdy a výlety do celého světa.</p>
+          <div class="ikonky">
+            <img src="obrazky/cactus-icon.svg" alt="kaktus" />
+            <p>Zajistíme exotické destinace a zážitkové pobyty.</p>
+          </div>
 
-      </div>
-
-      <div class="ikonky">
-
-        <img src="obrazky/cactus-icon.svg" alt="kaktus" />
-        <p>Zajistíme exotické destinace a zážitkové pobyty.</p>
-
-      </div>
-
-      <div class="ikonky">
-
-        <img src="obrazky/plane-icon.svg" alt="letadlo" />
-        <p>Seženeme nejlevnější letenky v daném termínu.</p>
-
-      </div>
-    </div>
-    </section>
-
-    <section class="part3">
-<div class="lefttext">
-      <h2>Služby našich delegátů na místě</h2>
-
-      <p>
-        Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí
-        vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.
-      </p>
-    </div>
-      <div class="dolniikonky">
-      <div class="ikonky">
-
-        <img src="obrazky/palm-icon.svg" alt="palma" />
-        <p>Doporučíme ty nejhezčí destinace pro výlety.</p>
-
-      </div>
-
-      <div class="ikonky">
-
-        <img src="obrazky/umbrella-icon.svg" alt="slunecnik" />
-        <p>Objednáme slunečníky a plážová lehátka.</p>
-
-      </div>
-
-      <div class="ikonky">
-
-        <img src="obrazky/rv-icon.svg" alt="karavan" />
-        <p>Pronajmeme karavan nebo vůz na cestování.</p>
-
-      </div>
-      </div>
+          <div class="ikonky">
+            <img src="obrazky/plane-icon.svg" alt="letadlo" />
+            <p>Seženeme nejlevnější letenky v daném termínu.</p>
+          </div>
+        </div>
       </section>
 
-    </div>
+      <section class="part3">
+        <div class="lefttext">
+          <h2>Služby našich delegátů na místě</h2>
 
+          <p>
+            Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně.
+            Doporučí vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku
+            nebo auta.
+          </p>
+        </div>
+        <div class="dolniikonky">
+          <div class="ikonky">
+            <img src="obrazky/palm-icon.svg" alt="palma" />
+            <p>Doporučíme ty nejhezčí destinace pro výlety.</p>
+          </div>
+
+          <div class="ikonky">
+            <img src="obrazky/umbrella-icon.svg" alt="slunecnik" />
+            <p>Objednáme slunečníky a plážová lehátka.</p>
+          </div>
+
+          <div class="ikonky">
+            <img src="obrazky/rv-icon.svg" alt="karavan" />
+            <p>Pronajmeme karavan nebo vůz na cestování.</p>
+          </div>
+        </div>
+      </section>
+    </div>
   </body>
-  
 </html>
